<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:orientation="horizontal"
        >

        <ImageButton
            android:id="@+id/add"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/plus"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="45dp"
            android:background="@color/white"
            />








    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/My_Pet"
            android:text="@string/Pet_Info"
            android:background="@color/white"
            >


        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/City"
            android:text="@string/City"
            android:background="@color/white"
            >


        </Button>
        <Button
            android:id="@+id/Doc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:background="@color/white"
            android:text="@string/Doc">


        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Date"
            android:text="@string/Date"
            android:layout_marginTop="-10dp"
            android:background="@color/white"
            >


        </Button>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Submit"
            android:text="@string/Submit"
            android:layout_marginTop="100dp"
            android:background="@color/white"
            >


        </Button>


    </LinearLayout>



</LinearLayout>