<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/doc1"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="35dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/doc"></ImageView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/doctor_name"
            android:textSize="40sp"
            android:textStyle="italic"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="Jerry"
            android:textSize="40sp"
            android:layout_marginLeft="20dp"
            android:textStyle="italic"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_fans"
            android:textSize="40sp"
            android:textStyle="italic"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="154"
            android:textSize="40sp"
            android:layout_marginLeft="20dp"
            android:textStyle="italic"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_hosipital"
            android:textSize="40sp"
            android:textStyle="italic"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="208"
            android:textSize="40sp"
            android:layout_marginLeft="20dp"
            android:textStyle="italic"></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/doctor_recent_reply"
            android:textSize="40sp"
            android:textStyle="italic"></TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="小福别隔着臊皮"
            android:textSize="40sp"
            android:layout_marginLeft="20dp"
            android:textStyle="italic"></TextView>
    </LinearLayout>

</LinearLayout>